chore: refactor configs

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./build/main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"ts-node-dev -- respawn transpileOnly ./src/main/index.ts",
+    "dev":"ts-node-dev --respawn --transpileOnly ./src/main/index.ts",
     "start":"npm build && node ./build/main/index.js",
     "build": "rimraf dist && tsc"
   },
